[tool.poetry]
name = "visionapi-make"
version = "3.2.1"
description = ""
authors = ["Anett Huebner <info@starwit.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
protoc-wrapper = "^31.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

